[tool.black]
line-length = 79

[project]
name = "sdxl-generator"
version = "0.1.0"
description = "Simple SDXL Image Batch Generator"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Chauvel", email = "jean.p.chauvel@gmail.com" }
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "diffusers==0.34.0",
    "peft>=0.15.2",
    "sd-embed",
    "torch==2.7.1",
    "transformers>=4.53.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[project.scripts]
sdxl-generator = "sdxl_generator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sdxl_generator/__about__.py"

[tool.uv.sources]
sd-embed = { git = "https://github.com/xhinker/sd_embed.git", rev = "main" }
